--- a/React/Frontend/FarmaciaOasis/package.json
+++ b/React/Frontend/FarmaciaOasis/package.json
@@ -1,14 +1,23 @@
 {
 
   "name": "react",
+
   "private": true,
+
   "version": "0.0.0",
+
   "type": "module",
+
   "scripts": {
+
     "dev": "vite",
+
     "build": "vite build",
+
     "lint": "eslint .",
+
     "preview": "vite preview"
+
   },
 
   "dependencies": {
@@ -17,7 +26,9 @@
 
     "react": "^19.1.1",
 
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+
+    "react-router-dom": "^7.9.3"
 
   },
 
