--- a/React/Frontend/FarmaciaOasis/package.json
+++ b/React/Frontend/FarmaciaOasis/package.json
@@ -22,13 +22,35 @@
 
   "dependencies": {
 
+    "@emotion/react": "^11.14.0",
+
+    "@mantine/core": "^8.3.3",
+
+    "@mantine/dates": "^8.3.3",
+
+    "@mantine/form": "^8.3.3",
+
+    "@mantine/hooks": "^8.3.3",
+
+    "@mantine/modals": "^8.3.3",
+
+    "@mantine/notifications": "^8.3.3",
+
+    "@tabler/icons-react": "^3.35.0",
+
     "axios": "^1.12.2",
 
-    "react": "^19.1.1",
+    "dayjs": "^1.11.18",
 
-    "react-dom": "^19.1.1",
+    "react": "^18.2.0",
 
-    "react-router-dom": "^7.9.3"
+    "react-dom": "^18.2.0",
+
+    "react-intl": "^7.1.11",
+
+    "react-router-dom": "^7.9.3",
+
+    "recharts": "^3.2.1"
 
   },
 
@@ -36,9 +58,9 @@
 
     "@eslint/js": "^9.36.0",
 
-    "@types/react": "^19.1.13",
+    "@types/react": "^18.2.7",
 
-    "@types/react-dom": "^19.1.9",
+    "@types/react-dom": "^18.2.4",
 
     "@vitejs/plugin-react": "^5.0.3",
 
