--- a/React/Frontend/FarmaciaOasis/package.json
+++ b/React/Frontend/FarmaciaOasis/package.json
@@ -24,6 +24,12 @@
 
     "@emotion/react": "^11.14.0",
 
+    "@fontsource/montserrat": "^5.2.8",
+
+    "@fontsource/poppins": "^5.2.7",
+
+    "@fontsource/roboto": "^5.2.8",
+
     "@mantine/core": "^8.3.3",
 
     "@mantine/dates": "^8.3.3",
