--- a/React/Frontend/FarmaciaOasis/package.json
+++ b/React/Frontend/FarmaciaOasis/package.json
@@ -48,6 +48,10 @@
 
     "dayjs": "^1.11.18",
 
+    "exceljs": "^4.4.0",
+
+    "file-saver": "^2.0.5",
+
     "html2pdf.js": "^0.12.1",
 
     "react": "^18.2.0",
@@ -60,7 +64,9 @@
 
     "react-router-dom": "^7.9.4",
 
-    "recharts": "^3.2.1"
+    "recharts": "^3.2.1",
+
+    "xlsx": "^0.18.5"
 
   },
 
