--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,4 @@ React/Backend/node_modules
 React/Frontend/node_modules
 React/Frontend/FarmaciaOasis/node_modules
 Angular
- React/Backend/farmacia.db
+./React/Backend/farmacia.db
