quitando el fackin Bd

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ React/Frontend/node_modules
 React/Frontend/FarmaciaOasis/node_modules
 Angular
 ./React/Backend/farmacia.db
+React/Backend/farmacia.db
